Copy button for command
Signed-off-by: Tyler Nijmeh <tylernij@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="permission_title">Permission required</string>
     <string name="permission_message">Grant this app permission via ADB:\n\nadb shell pm grant com.draco.pdnsqs android.permission.WRITE_SECURE_SETTINGS</string>
     <string name="permission_dismiss">Dismiss</string>
+    <string name="permission_copy">Copy</string>
 </resources>
