--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">PDNSQS</string>
+    <string name="tile_label">Private DNS</string>
     <string name="permission_title">Permission required</string>
     <string name="permission_message">Grant this app permission via ADB:\n\nadb shell pm grant com.draco.pdnsqs android.permission.WRITE_SECURE_SETTINGS</string>
     <string name="permission_dismiss">Dismiss</string>
